Hint at JVM Flags